Working on fitting prototypes